# charter

./: .gitignore  charter.example.toml  pyproject.toml
src/charter/: __init__.py  __main__.py  analyzer.py  config.py  dsl.py  executor.py  log.py  reader.py
