[project]
name = "charter"
version = "0.1.0"
description = "AI-powered Excel data analysis system"
readme = "README.md"
authors = [
    { name = "Dotslash Lu", email = "dotslash.lu@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openpyxl",
    "openai",
    "pydantic",
    "click",
    "rich",
]

[project.scripts]
charter = "charter.__main__:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
